<resources>
    <string name="app_name" translatable="false">ApolloKiosk</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="label_scroll_welcome" translatable="false">WELCOME</string>
    <string name="label_scroll_apollo" translatable="false">APOLLO</string>
    <string name="label_scroll_pharmacy" translatable="false">PHARMACY</string>
    <string name="Choose_Your_Language_tamil" translatable="false">மொழியை தேர்ந்தெடுங்கள்</string>
    <string name="Choose_Your_Language_telugu" translatable="false">మీ భాషను ఎంచుకోండి</string>
    <string name="continue_txt">Continue</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_tamil" translatable="false">தமிழ்</string>
    <string name="language_telugu" translatable="false">తెలుగు</string>
    <string name="language_kannada" translatable="false">ಕನ್ನಡ</string>
    <string name="language_malayalam" translatable="false">മലയാളം</string>
    <string name="language_hindi" translatable="false">हिंदी</string>
    <string name="language_panjabi" translatable="false">ਪੰਜਾਬੀ</string>
    <string name="language_gujarathi" translatable="false">ગુજરાતી</string>
    <string name="language_bangali" translatable="false">বাংলা</string>
    <string name="language_urdu" translatable="false">اُردُو</string>
    <string name="delete" translatable="false">DELETE</string>
    <string name="q" translatable="false">Q</string>
    <string name="w" translatable="false">W</string>
    <string name="e" translatable="false">E</string>
    <string name="r" translatable="false">R</string>
    <string name="t" translatable="false">T</string>
    <string name="y" translatable="false">Y</string>
    <string name="u" translatable="false">U</string>
    <string name="i" translatable="false">I</string>
    <string name="o" translatable="false">O</string>
    <string name="p" translatable="false">P</string>
    <string name="a" translatable="false">A</string>
    <string name="s" translatable="false">S</string>
    <string name="d" translatable="false">D</string>
    <string name="f" translatable="false">F</string>
    <string name="g" translatable="false">G</string>
    <string name="h" translatable="false">H</string>
    <string name="j" translatable="false">J</string>
    <string name="k" translatable="false">K</string>
    <string name="l" translatable="false">L</string>
    <string name="z" translatable="false">Z</string>
    <string name="x" translatable="false">X</string>
    <string name="c" translatable="false">C</string>
    <string name="v" translatable="false">V</string>
    <string name="b" translatable="false">B</string>
    <string name="n" translatable="false">N</string>
    <string name="m" translatable="false">M</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="hash" translatable="false">#</string>
    <string name="at" translatable="false">\@</string>
    <string name="and" translatable="false">&amp;</string>
    <string name="star" translatable="false">*</string>
    <string name="apo" translatable="false">\'</string>
    <string name="percentage" translatable="false">%</string>
    <string name="dot" translatable="false">.</string>
    <string name="comma" translatable="false">,</string>
    <string name="hyfen" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="digit_one" translatable="false">1</string>
    <string name="digit_two" translatable="false">2</string>
    <string name="digit_three" translatable="false">3</string>
    <string name="digit_four" translatable="false">4</string>
    <string name="digit_five" translatable="false">5</string>
    <string name="digit_six" translatable="false">6</string>
    <string name="digit_seven" translatable="false">7</string>
    <string name="digit_eight" translatable="false">8</string>
    <string name="digit_nine" translatable="false">9</string>
    <string name="digit_zero" translatable="false">0</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="label_serial_number_one" translatable="false">01</string>
    <string name="label_serial_number_two" translatable="false">02</string>
    <string name="label_serial_number_three" translatable="false">03</string>
    <string name="label_serial_number_four" translatable="false">04</string>
    <string name="label_serial_number_five" translatable="false">05</string>
    <string name="label_serial_number_six" translatable="false">06</string>
    <string name="label_serial_number_seven" translatable="false">07</string>
    <string name="label_serial_number_eight" translatable="false">08</string>
    <string name="label_serial_number_nine" translatable="false">09</string>
    <string name="label_serial_number_ten" translatable="false">10</string>
    <string name="label_serial_number_eleven" translatable="false">11</string>
    <string name="label_serial_number_twelve" translatable="false">12</string>
    <string name="label_serial_number_thirteen" translatable="false">13</string>
    <string name="label_serial_number_fourteen" translatable="false">14</string>
    <string name="label_serial_number_fifteen" translatable="false">15</string>
    <string name="label_serial_number_sixteen" translatable="false">16</string>
    <string name="label_serial_number_seventeen" translatable="false">17</string>
    <string name="label_serial_number_eighteen" translatable="false">18</string>
    <string name="Lets_Begin">"Let's Begin"</string>
    <string name="Mobile_Number">Mobile Number*</string>
    <string name="Back">Back</string>
    <string name="Home">Home</string>
    <string name="error_message_name">Enter Name</string>
    <string name="error_message_flatNo">Enter House/Flat No.</string>
    <string name="error_message_streetname">Enter Street</string>
    <string name="error_message_pinCode">Enter PinCode</string>
    <string name="error_message_areaname">Enter Area</string>
    <string name="error_message_cityname">Enter City</string>
    <string name="error_message_statename">Enter State</string>
    <string name="Your_Scanned_Prescription_lable">Your Scanned Prescription is here</string>
    <string name="Continue">Continue</string>
    <string name="Please_Place_your_prescription">Please Place your prescription into scanner</string>
    <string name="Search">Search products</string>
    <string name="Name_of_the_Medicine">Name of the Medicine</string>
    <string name="Quantity">Quantity</string>
    <string name="Credit_Card">Card Swipe</string>
    <string name="COD">Cash on Delivery</string>
    <string name="Address">Address:</string>
    <string name="faq">FAQ</string>
    <string name="cancel">Cancel</string>
    <string name="try_again_later">Please try again later</string>
    <string name="label_select_your_language">Select Your Language</string>
    <string name="label_help">Help</string>
    <string name="label_send_otp">Send OTP</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="label_mobile_number_verification">Mobile Number \n Verification</string>
    <string name="label_mobile_number_err">Please enter correct mobile number</string>
    <string name="label_logIi_with_mobile_number">Please Login With \n Your Mobile Number</string>
    <string name="label_verify_number">Verify Your Mobile Number</string>
    <string name="label_otp_sent_mobile_number">4 Digit OTP sent on below mobile number</string>
    <string name="label_change_number">Change Number</string>
    <string name="label_verify_otp">Verify OTP</string>
    <string name="label_enter_otp_below">Enter OTP below</string>
    <string name="label_havent_receive_otp">"Haven't received OTP?"</string>
    <string name="label_awesome">Awesome!</string>
    <string name="label_your_phone_number">Your Phone Number</string>
    <string name="label_verified_successful">has been verified successfully</string>
    <string name="label_okay">Okay</string>
    <string name="label_my_text">My</string>
    <string name="label_search">Search</string>
    <string name="label_cart">Cart</string>
    <string name="label_orders">Orders</string>
    <string name="label_offers">Offers</string>
    <string name="label_profile">Profile</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_order_medicine">Order medicine in just 3 simple steps</string>
    <string name="label_scan_prescription">Scan Your Prescription</string>
    <string name="label_need_help_call">Need Help? Call</string>
    <string name="label_care_number">1860 500 0101</string>
    <string name="label_or">or</string>
    <string name="label_insert_prescription">Insert Your Prescription</string>
    <string name="label_in_scanner">in the scanner</string>
    <string name="label_prescription_fail_text">"We Couldn't transcribe your prescription at this moment"</string>
    <string name="label_prescription_fail_err">Would you like our representative \n to translate your prescription?</string>
    <string name="label_no">No</string>
    <string name="label_will_add">I will add</string>
    <string name="label_no_prescription_err">You can search and \n add products \n manually and play \n your order</string>
    <string name="label_yes">Yes</string>
    <string name="label_notify_me">Notify Me</string>
    <string name="label_yes_prescription_err">An SMS will be send on \n your registered mobile \n number once your \n prescription is \n transcribed.</string>
    <string name="label_yes_prescription_alert">if yes, it may take upto 10 \n minutes for our representation \n to transcribe your prescription \n and update it here</string>
    <string name="label_your_scanned_prescription">Your Scanned Prescription</string>
    <string name="label_next">Next</string>
    <string name="label_my_prescription">My Prescription</string>
    <string name="label_items_in_cart">items in cart</string>
    <string name="label_price">Price</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_action">Action</string>
    <string name="label_grand_total">Grand Total</string>
    <string name="label_view_all">View All</string>
    <string name="label_your_offers">Your Offers</string>
    <string name="label_trending_now">Trending</string>
    <string name="label_search_your_products">Search Your Products</string>
    <string name="label_categories">Categories</string>
    <string name="label_products_in_the_list">Products in the List</string>
    <string name="label_add_to_cart">Add to Cart</string>
    <string name="label_notify_mobile_number">We will notify you on your mobile number</string>
    <string name="label_once_your_prescription">once your prescription is</string>
    <string name="label_ok">OK</string>
    <string name="label_capture_img">Capture</string>
    <string name="label_capture_prescription">Capture Prescription</string>
    <string name="label_capture_prescription_message">Place the prescription in the bottom tray and capture</string>
    <string name="label_please_enter_valid_key" translatable="false">Please enter valid key</string>
    <string name="label_submit" translatable="false">Submit</string>
    <string name="label_please_login_with_access_key" translatable="false">Please Login with access key</string>
</resources>