<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".activities.USBCameraActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seventy_dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/sixty_dp"
            android:layout_height="@dimen/sixty_dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/ten_dp"
            android:alpha="0.8"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/ten_dp"
            android:src="@drawable/back_icon"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/five_dp"
            android:text="@string/label_capture_prescription"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_action_bar"
        android:background="@color/color_order_summary_green"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/five_dp"
            android:paddingBottom="@dimen/five_dp"
            android:text="@string/label_capture_prescription_message"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/message_layout">

        <com.serenegiant.usb.widget.UVCCameraTextureView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/capture_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:background="@drawable/scan_btn_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/label_capture_img"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/twenty_five_sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>