<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenbackground"
        android:gravity="center"
        android:id="@+id/parent"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <ImageView
            android:layout_width="@dimen/eighty_dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_setting" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_please_login_with_access_key"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/accesskey_error_bg"
            android:layout_width="@dimen/five_hundred_thirty_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingRight="@dimen/ten_dp"
            android:paddingBottom="@dimen/five_dp">


            <TextView
                android:id="@+id/accesskey_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/label_please_enter_valid_key"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/accesskey_textinput"
                android:layout_width="@dimen/five_hundred_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/phone_edittext_bg"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/five_hundred_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_selection_btn_bg"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_submit"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/twenty_sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>