<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/one_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_one"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/two_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_two"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/three_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_three"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/four_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_four"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/five_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_five"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/six_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_six"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/seven_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_seven"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/eight_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_eight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/nine_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_nine"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/label_ok"
                android:hapticFeedbackEnabled="true"
                android:src="@drawable/keyboard_back_icon"
                android:visibility="invisible" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/zero_btn_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="0.2"
                android:background="@drawable/numeric_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/digit_zero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_six_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.15" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/clear"
                android:hapticFeedbackEnabled="true"
                android:src="@drawable/keyboard_back_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/forty_eight_dp"
                android:layout_gravity="center"
                android:layout_weight="0.05" />
        </TableRow>
    </TableLayout>
</RelativeLayout>